# mate-workspace-name-applet

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  __init__.py  aligned_window.py  autogen.sh  com.puzzlezapper.wsname-applet-py.gschema.xml  configure.ac  configure.scan  debug.stderr  debug.stdout  org.mate.panel.WsnameApplet.mate-panel-applet.in.in  org.mate.panel.applet.WsnameAppletFactory.service.in  wsname_applet.py  wsnamelet_globals.py.in
po/: Makefile  POTFILES  POTFILES.in~
po/.svn/: all-wcprops  entries
po/.svn/text-base/: POTFILES.in.svn-base
